--- a/package.json
+++ b/package.json
@@ -9,18 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.18",
+    "@react-email/tailwind": "0.0.17",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-email": "^2.1.3",
+    "react-emoji": "^0.5.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.10.2",
+    "resend": "^3.2.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.11.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
