--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-email/components": "^0.0.18",
     "@react-email/tailwind": "0.0.17",
+    "@vercel/speed-insights": "^1.0.10",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
